Implemented Load all VM, SecurityGroup and KeyPair in backend
